ajuste no add documento

--- a/templates/documents.html
+++ b/templates/documents.html
@@ -121,6 +121,7 @@
             <div class="modal-actions">
                 <button type="button" class="action-btn" onclick="hideModal('addDocumentModal')">Cancel</button>
                 <button type="submit" class="action-btn primary">Upload</button>
+                <input type="hidden" name="user_id" id="user_id">
             </div>
         </form>
     </div>
